pagewrap width fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 #pagewrap {
   max-width: 1100px;
+  width: 100%;
   margin: 10px auto;
   padding: 20px 20px 0;
 }
